--- a/css/evoroom.css
+++ b/css/evoroom.css
@@ -1,5 +1,5 @@
-* {
- font-family: inherit;  /* we can get rid of this after pulling in Matt's new stuff */
+body {
+    font-family: Verdana, sans-serif;
 }
 
 #evoroom {
@@ -10,7 +10,7 @@
     height: 1096px;
     font-size: 22px;
     position: relative;
-    font-family: 'Droid Sans', sans-serif !important;
+    /*font-family: 'Droid Sans', sans-serif !important;*/
 }
 
 .hide {
