--- a/css/evoroom.css
+++ b/css/evoroom.css
@@ -34,6 +34,7 @@ body {
 .organism-image {
     height: 180px;
     width: 180px;
+    margin-top: 15px;
 }
 
 /* ===================== HEADER ===================== */
@@ -61,6 +62,18 @@ header {
 
 
 /* ====================== BODY - GENERAL ====================== */
+
+#assigned-organism-container {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    z-index: 1;
+}
+
+#assigned-organism-container .organism-image {
+    width: 290px;
+    height: 290px;
+}
 
 .text-box-large {
     position: absolute;
@@ -96,7 +109,7 @@ header {
 }
 
 .body-container-medium {
-    height: 430px;
+    height: 460px;
     overflow-y: scroll;
 }
 
@@ -112,11 +125,29 @@ header {
 
 .small-button {
     position: absolute;
-    bottom: 50px;
+    bottom: 40px;
     left: 50%;
     margin-left: -70px;
     width: 140px;
     height: 60px;   
+}
+
+.organism-table {
+    width: 450px;
+    border-collapse: collapse;
+}
+
+.organism-table td {
+    border: 1px dotted #949494;
+}
+
+.organism-boxes {
+    text-align: center;
+}
+
+.organism-selector-dropdown {
+    width: 120px;
+    font-size: 28px;
 }
 
 
@@ -129,6 +160,10 @@ header {
     margin-left: -70px;
     width: 140px;
     height: 60px;
+}
+
+.guide-text {
+    color: #F7F7F7;
 }
 
 .participant-button {
@@ -160,5 +195,8 @@ header {
     text-align: center;
 }
 
+#ancestor-choice .ancestor-information-table {
+    font-size: 18px;
+}
 
 
