--- a/css/evoroom.css
+++ b/css/evoroom.css
@@ -217,3 +217,8 @@ header {
     height: 700px;
 }
 
+#meetup-instructions .question-button {
+    margin-top: 18px;
+    width: 300px;
+    height: 55px;
+}
