--- a/css/evoroom-teacher.css
+++ b/css/evoroom-teacher.css
@@ -1,20 +1,64 @@
 body {
   background-color: #12120C;
-  background-image: url('/images/bkgd.png');
+  background-image: url('/assets/images/bkgd.png');
   background-repeat: repeat;
   font-family: Verdana, sans-serif;
 }
+
+/* ===================== HEADER STUFF ===================== */
+header {
+    height: 40px;
+}
+
+header .progressbar {
+    padding-bottom: 5px;
+    font-family: 'Droid Sans', sans-serif !important;
+    font-size: 12pt !important;
+}
+
+header .progressbar .indicator {
+    display: inline-block;
+    width: 103px;
+    height: 30px;
+    text-align: center;
+    padding-top: 10px;
+    margin-top: 2px;
+    margin-right: 3px;
+    /*border: 1px solid red;*/
+    background-color: #333333;
+    background-repeat: no-repeat;
+    background-position:center;
+    color: #808080;
+}
+
+header .done {
+    /*background-image: url('/images/arrow2_green.png');*/
+    background-color: #40B34F !important;
+    color: white !important;
+}
+
+/*header .todo {
+    background-color: #333333;
+    background-repeat: no-repeat;
+    background-position:center;
+    color: #808080;
+}*/
+
+header .hide {
+    display:none;
+}
+/* ===================== HEADER STUFF ===================== */
 
 .teacher-dashboard {
   border-collapse: collapse;
   width: 100%;
 }
 
-.teacher-dashboard tr.step > * {
+.teacher-dashboard tr.phase > * {
   vertical-align: middle;
 }
 
-.teacher-dashboard tr.step {
+.teacher-dashboard tr.phase {
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: black;
@@ -23,12 +67,12 @@ body {
   padding-left: 50px;
 }
 
-.teacher-dashboard tr.step:nth-child(even) {
+.teacher-dashboard tr.phase:nth-child(even) {
   background-color: black;
   background-color: rgba(0,0,0,0.6);
 }
 
-.teacher-dashboard tr.step > th {
+.teacher-dashboard tr.phase > th {
   color: white;
   font-weight: bold;
   width: 15ex;
@@ -43,12 +87,12 @@ body {
   padding-bottom: 10px;
 }
 
-.teacher-dashboard tr.step > .buttons {
+.teacher-dashboard tr.phase > .buttons {
   line-height: 50px;
   white-space: nowrap;
 }
 
-.teacher-dashboard tr.step > .students {
+.teacher-dashboard tr.phase > .students {
   margin-left: 15px;
   white-space: normal;
   min-width: 40%;
