4 new lookup images, lookup 200mya complete

--- a/css/evoroom.css
+++ b/css/evoroom.css
@@ -252,30 +252,6 @@ header {
     height: 300px;
 }
 
-
-/* ========= INFO LOOKUP ========= */
-
-#information-lookup-overview .time-period-image {
-    margin-top: 15px;
-}
-
-#information-lookup-container {
-    position: absolute;
-    top: 420px;
-}
-
-#clickable-rainforest-image {
-    position: absolute;
-}
-
-/* 200 mya */
-#organism-dinosaur {
-    position: absolute;
-    top: 95px;
-    left: 515px;
-}
-
-
 #explanation-response .explanation-entry {
     font-size: 20px;
     margin-top: 15px;
@@ -295,3 +271,55 @@ header {
 #explanation-response label {
     font-weight: normal;
 }
+
+/* ========= INFO LOOKUP ========= */
+
+#information-lookup-overview .time-period-image {
+    margin-top: 15px;
+}
+
+#information-lookup-container {
+    position: absolute;
+    top: 420px;
+}
+
+#clickable-rainforest-image {
+    position: absolute;
+}
+
+.image-button {
+    position: absolute;
+}
+
+#lookup-text {
+    position: absolute;
+    top: 410px;
+    left: 180px;
+    width: 445px;
+}
+
+/* 200 mya */
+#organism-dinosaur {
+    position: absolute;
+    top: 95px;
+    left: 515px;
+}
+#organism-hadrocodium {
+    position: absolute;
+    top: 355px;
+    left: 380px;
+}
+#organism-leaf {
+    position: absolute;
+    top: 110px;
+    left: 120px;    
+}
+#organism-tree1 {
+    position: absolute;
+    left: -45px;    
+}
+#organism-tree2 {
+    position: absolute;
+    left: 692px;    
+}
+
