--- a/css/evoroom.css
+++ b/css/evoroom.css
@@ -334,7 +334,7 @@ header {
 }
 #organism-crusafonta {
     position: absolute;
-    top: 330px
+    top: 330px;
     left: 300px;
 }
 #organism-archaeopteryx {
@@ -408,7 +408,7 @@ header {
 }
 #organism-miacids {
     position: absolute;
-    top: 300px
+    top: 300px;
     left: 280px;
 }
 
